# tmcli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure  homebrew  pack  version
Formula/: tmcli.rb
cmake/: EnsureOutOfSourceBuild.cmake  FindGo.cmake
source/: go.mod  main.go  version.go.in
source/tmutil/: advanced.go  backup.go  browse.go  destination.go  exclusion.go  preferences.go  restore.go  snapshot.go  tmutil.go
source/ui/: command.go  help.go  input.go  model.go  monitor.go  styles.go
